--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
 numpy == 1.15.3
 librosa
 soundfile
-pyworld
 torch
-torchvision
 tensorboardX
 fire
 inflect==0.2.5
 Unidecode==1.0.22
 pandas
 pretty_midi
+ffmpeg_normalize
