Add New dataset and functions (#5)
* fix bugs
* add Pre-process pipeline for VoiceBank Dataset
* Add Meta and Dataset for VoiceBank
* fix minors
* Add new func on dataset, ISTFT on gpu, librosa 0.7.0
* add hit badge
* Add VCTK Dataset/preprocess, fix minor.
* fix vctk, add attention modules, add extra features on dataset
* add multi head attention
* add lowpass filter, volume norm window and reverse it

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 numpy == 1.15.3
-librosa
+librosa == 0.7.0
 soundfile
 torch
 tensorboardX
@@ -9,3 +9,6 @@ Unidecode==1.0.22
 pandas
 pretty_midi
 ffmpeg_normalize
+pytest
+tqdm
+pysndfx
